--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.1.2",
-    "vue": "^2.6.10"
+    "material-design-icons-iconfont": "^5.0.1",
+    "vue": "^2.6.10",
+    "vuetify": "^2.1.4",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@mdi/font": "^4.5.95",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
