--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.1.2",
     "material-design-icons-iconfont": "^5.0.1",
+    "vee-validate": "^3.0.11",
+    "vform": "^1.0.1",
     "vue": "^2.6.10",
+    "vue-color": "^2.7.0",
     "vuetify": "^2.1.4",
     "vuex": "^3.1.1"
   },
